corporative-services Overflow Fix (For Tab Panel)

--- a/resources/js/assets/scss/exchange/exhange.scss
+++ b/resources/js/assets/scss/exchange/exhange.scss
@@ -1271,6 +1271,31 @@ header .nav-link {
     .up{
         color: var(--up) !important;
     }
+    .instution_moreContent{
+        padding-top: 132px !important;
+        text-align: center !important;
+    }
+    .instution_moreIcon{
+        width: 56px !important;
+        height: 56px !important;
+        margin: 0 auto 38px !important;
+        img{
+            width: 100% !important;
+            height: 100% !important;
+        }
+    }
+    .instution_moreDesc{
+        margin-bottom: 18px !important;
+        line-height: 30px !important;
+        font-size: 24px !important;
+        color: var(--up) !important;
+    }
+    .instution_moreTip{
+        margin-bottom: 0 !important;
+        line-height: 30px !important;
+        font-size: 24px !important;
+        color: var(--headerBg) !important;
+    }
 }
 
 
@@ -1294,5 +1319,21 @@ header .nav-link {
             grid-gap: 48px 108px;
             padding: 84px 0;
         }
+    }
+}
+
+.tabs{
+    .nav-fill{
+        overflow-x: auto !important;
+        white-space: nowrap !important;
+        .nav-item{
+            overflow: hidden !important;
+            white-space: nowrap !important;
+            text-overflow: ellipsis;
+            min-width: 200px !important;
+        }
+    }
+    .nav{
+        flex-wrap: nowrap !important;
     }
 }
